@@ -1,5 +1,6 @@
 plyr 0.1.6 (2008-XX-XX) ---------------------------------------------------
 
+* use list names where present
 
 plyr 0.1.5 (2008-02-23) ---------------------------------------------------
 
